<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4C000000"
    tools:context=".ui.NewSplash">
    <!-- 팝업 레이아웃 -->
    <LinearLayout
        android:id="@+id/popupLayout"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:layout_marginHorizontal="24dp"
        android:background="@drawable/rounded_corner_background"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <!-- 팝업 내용 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="105dp"
            android:layout_weight="0.3"
            android:gravity="center"
            android:background="@drawable/rounded_corner_background_top"
            >
            <!-- 첫 번째 영역의 텍스트 -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pe_title"
                android:textSize="18sp"
                android:paddingHorizontal="16dp"
                android:textColor="@android:color/white"

                android:textStyle="bold"
                android:gravity="center"/>

        </LinearLayout>

        <!-- 콘텐트 영역 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:paddingTop="24dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:orientation="vertical"
            android:background="@android:color/white">
            <!-- 두 번째 영역의 내용 -->

            <!-- 첫 번째 로우 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginBottom="10dp">
                <!-- 하얀색 동그라미 박스 -->
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:padding="10dp"
                    android:layout_marginEnd="12dp"
                    android:background="@drawable/blue_circle"
                    android:src="@drawable/geoaltfill"/>

                <!-- 타이틀, "(필수)" 텍스트 -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="6dp"
                    android:text="@string/pe_title_1"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pe_select"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:textColor="#5D64FB" />

            </LinearLayout>

                    <!-- 서브타이틀 -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pe_desc_1"
                        android:textSize="12sp"
                        android:textStyle="normal"
                        android:textColor="#909090"/>

                </LinearLayout>


            </LinearLayout>


            <!-- 두 번째 로우 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginBottom="10dp">
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:padding="10dp"
                    android:layout_marginEnd="12dp"
                    android:background="@drawable/blue_circle"
                    android:src="@drawable/noti"/>
                <!-- 타이틀, "(필수)" 텍스트 -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="6dp"
                            android:text="@string/pe_title_2"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            android:textColor="@android:color/black"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/pe_select"
                            android:textSize="12sp"
                            android:textStyle="bold"
                            android:textColor="#5D64FB" />

                    </LinearLayout>

                    <!-- 서브타이틀 -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pe_desc_2"
                        android:textSize="12sp"
                        android:textStyle="normal"
                        android:textColor="#909090"/>

                </LinearLayout>


            </LinearLayout>
            <!-- 세 번째 로우 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginBottom="10dp">
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:padding="10dp"
                    android:layout_marginEnd="12dp"
                    android:background="@drawable/blue_circle"
                    android:src="@drawable/audio"/>
                <!-- 타이틀, "(필수)" 텍스트 -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="6dp"
                            android:text="@string/pe_title_3"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            android:textColor="@android:color/black"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/pe_select"
                            android:textSize="12sp"
                            android:textStyle="bold"
                            android:textColor="#5D64FB" />

                    </LinearLayout>

                    <!-- 서브타이틀 -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pe_desc_3"
                        android:textSize="12sp"
                        android:textStyle="normal"
                        android:textColor="#909090"/>

                </LinearLayout>


            </LinearLayout>
            <!-- 네 번째 로우 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginBottom="10dp">
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:padding="10dp"
                    android:layout_marginEnd="12dp"
                    android:background="@drawable/blue_circle"
                    android:src="@drawable/image"/>
                <!-- 타이틀, "(필수)" 텍스트 -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="6dp"
                            android:text="@string/pe_title_4"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            android:textColor="@android:color/black"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/pe_select"
                            android:textSize="12sp"
                            android:textStyle="bold"
                            android:textColor="#5D64FB" />

                    </LinearLayout>

                    <!-- 서브타이틀 -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pe_desc_4"
                        android:textSize="12sp"
                        android:textStyle="normal"
                        android:textColor="#909090"/>

                </LinearLayout>


            </LinearLayout>
            <!-- 다섯 번째 로우 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginBottom="10dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginEnd="12dp"
                    android:background="@drawable/blue_circle"
                    android:padding="10dp"
                    android:src="@drawable/camera" />
                <!-- 타이틀, "(필수)" 텍스트 -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="6dp"
                            android:text="@string/pe_title_5"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            android:textColor="@android:color/black"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/pe_select"
                            android:textSize="12sp"
                            android:textStyle="bold"
                            android:textColor="#5D64FB" />

                    </LinearLayout>

                    <!-- 서브타이틀 -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pe_desc_5"
                        android:textSize="12sp"
                        android:textStyle="normal"
                        android:textColor="#909090"/>

                </LinearLayout>


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_weight="5"
                />
            <!-- 디바이더 -->
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#E8EBF5"
                android:layout_marginVertical="24dp"
              />

            <!-- 텍스트뷰 -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_weight="3"
                android:text="@string/pe_desc_text"
                android:textColor="#909090"
                android:textSize="12sp" />

        </LinearLayout>

        <!-- 세 번째 영역 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="88dp"
            android:layout_weight="0.1"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:gravity="center"
            android:background="@drawable/rounded_corner_background_bottom"
           >
            <!-- 세 번째 영역의 내용 -->
            <!-- 확인 버튼 -->
            <Button
                android:id="@+id/confirmButton"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:text="@string/pe_button"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:background="@drawable/rounded_corner_background_button"
                android:radius="4dp"/>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>